bindings/r/pls4all/src/libp4a/include/pls4all/p4a.h


typedef enum p4a_status_t {
    P4A_OK                        =   0,
    P4A_ERR_INVALID_ARGUMENT      =   1,
    P4A_ERR_NULL_POINTER          =   2,
    P4A_ERR_SHAPE_MISMATCH        =   3,
    P4A_ERR_DTYPE_MISMATCH        =   4,
    P4A_ERR_STRIDE_INVALID        =   5,
    P4A_ERR_NOT_FITTED            =   6,
    P4A_ERR_NUMERICAL_FAILURE     =   7,
    P4A_ERR_CONVERGENCE_FAILED    =   8,
    P4A_ERR_OUT_OF_MEMORY         =   9,
    P4A_ERR_UNSUPPORTED           =  10,
    P4A_ERR_NOT_IMPLEMENTED       =  11,   
    P4A_ERR_ABI_MISMATCH          =  12,
    P4A_ERR_IO                    =  13,
    P4A_ERR_CORRUPT_BUFFER        =  14,
    P4A_ERR_VERSION_INCOMPATIBLE  =  15,
    P4A_ERR_BACKEND_UNAVAILABLE   =  16,
    P4A_ERR_CANCELLED             =  17,
    P4A_ERR_INTERNAL              = 255
} p4a_status_t;
P4A_API const char* p4a_status_to_string(p4a_status_t s);
typedef enum p4a_backend_t {
    P4A_BACKEND_AUTO            = 0,   
    P4A_BACKEND_REFERENCE_CPU   = 1,   
    P4A_BACKEND_NATIVE_CPU      = 2,   
    P4A_BACKEND_BLAS            = 3,
    P4A_BACKEND_OPENMP          = 4,   
    P4A_BACKEND_CUDA            = 5,
    P4A_BACKEND_OPENCL          = 6,   
    P4A_BACKEND_METAL           = 7    
} p4a_backend_t;
P4A_API int          p4a_backend_is_available(p4a_backend_t backend);
P4A_API const char*  p4a_backend_to_string(p4a_backend_t backend);
typedef enum p4a_dtype_t {
    P4A_DTYPE_UNKNOWN = 0,
    P4A_DTYPE_F64     = 1,
    P4A_DTYPE_F32     = 2,
    P4A_DTYPE_I32     = 3,    
    P4A_DTYPE_I64     = 4
} p4a_dtype_t;
P4A_API size_t       p4a_dtype_size(p4a_dtype_t dtype);
P4A_API const char*  p4a_dtype_to_string(p4a_dtype_t dtype);
typedef struct p4a_matrix_view_t {
    void*        data;
    int64_t      rows;
    int64_t      cols;
    int64_t      row_stride;   
    int64_t      col_stride;   
    p4a_dtype_t  dtype;
    int32_t      reserved0;    
} p4a_matrix_view_t;
typedef struct p4a_context_s                    p4a_context_t;
typedef struct p4a_config_s                     p4a_config_t;
typedef struct p4a_operator_bank_s              p4a_operator_bank_t;
typedef struct p4a_validation_plan_s            p4a_validation_plan_t;
typedef struct p4a_aom_global_result_s          p4a_aom_global_result_t;
P4A_API p4a_status_t p4a_context_create(p4a_context_t** out_ctx);
P4A_API void         p4a_context_destroy(p4a_context_t* ctx);
P4A_API p4a_status_t p4a_context_set_seed(p4a_context_t* ctx, uint64_t seed);
P4A_API p4a_status_t p4a_context_get_seed(const p4a_context_t* ctx,
                                          uint64_t* out_seed);
P4A_API p4a_status_t p4a_context_set_backend(p4a_context_t* ctx,
                                             p4a_backend_t backend);
P4A_API p4a_status_t p4a_context_get_backend(const p4a_context_t* ctx,
                                             p4a_backend_t* out_backend);
P4A_API p4a_status_t p4a_context_set_num_threads(p4a_context_t* ctx,
                                                 int32_t n_threads);
P4A_API p4a_status_t p4a_context_get_num_threads(const p4a_context_t* ctx,
                                                 int32_t* out_threads);
P4A_API const char*  p4a_context_last_error(const p4a_context_t* ctx);
P4A_API void         p4a_context_clear_error(p4a_context_t* ctx);
typedef enum p4a_algorithm_t {
    P4A_ALGO_PLS_REGRESSION = 0,
    P4A_ALGO_PLS_CANONICAL  = 1,
    P4A_ALGO_PLS_SVD        = 2,
    P4A_ALGO_PLS_DA         = 3,
    P4A_ALGO_OPLS           = 4,
    P4A_ALGO_OPLS_DA        = 5,
    P4A_ALGO_SPARSE_PLS     = 6,
    P4A_ALGO_MB_PLS         = 7,
    P4A_ALGO_LW_PLS         = 8,
    P4A_ALGO_AOM_PLS        = 9,
    P4A_ALGO_PCR            = 10
} p4a_algorithm_t;
typedef enum p4a_solver_t {
    P4A_SOLVER_NIPALS            = 0,
    P4A_SOLVER_SIMPLS            = 1,
    P4A_SOLVER_ORTHOGONAL_SCORES = 2,
    P4A_SOLVER_KERNEL_ALGORITHM  = 3,   
    P4A_SOLVER_WIDE_KERNEL       = 4,
    P4A_SOLVER_SVD               = 5,
    P4A_SOLVER_POWER             = 6,
    P4A_SOLVER_RANDOMIZED_SVD    = 7
} p4a_solver_t;
typedef enum p4a_deflation_t {
    P4A_DEFLATION_REGRESSION  = 0,
    P4A_DEFLATION_CANONICAL   = 1,
    P4A_DEFLATION_X_ONLY      = 2,
    P4A_DEFLATION_XY          = 3,
    P4A_DEFLATION_ORTHOGONAL  = 4
} p4a_deflation_t;
P4A_API p4a_status_t p4a_config_create(p4a_config_t** out_cfg);
P4A_API void         p4a_config_destroy(p4a_config_t* cfg);
P4A_API p4a_status_t p4a_config_set_algorithm        (p4a_config_t*, p4a_algorithm_t);
P4A_API p4a_status_t p4a_config_set_solver           (p4a_config_t*, p4a_solver_t);
P4A_API p4a_status_t p4a_config_set_deflation        (p4a_config_t*, p4a_deflation_t);
P4A_API p4a_status_t p4a_config_set_n_components     (p4a_config_t*, int32_t n);
P4A_API p4a_status_t p4a_config_set_center_x         (p4a_config_t*, int32_t enabled);
P4A_API p4a_status_t p4a_config_set_scale_x          (p4a_config_t*, int32_t enabled);
P4A_API p4a_status_t p4a_config_set_center_y         (p4a_config_t*, int32_t enabled);
P4A_API p4a_status_t p4a_config_set_scale_y          (p4a_config_t*, int32_t enabled);
P4A_API p4a_status_t p4a_config_set_tol              (p4a_config_t*, double tol);
P4A_API p4a_status_t p4a_config_set_store_scores     (p4a_config_t*, int32_t enabled);
P4A_API p4a_status_t p4a_config_get_algorithm        (const p4a_config_t*, p4a_algorithm_t*);
P4A_API p4a_status_t p4a_config_get_solver           (const p4a_config_t*, p4a_solver_t*);
P4A_API p4a_status_t p4a_config_get_deflation        (const p4a_config_t*, p4a_deflation_t*);
P4A_API p4a_status_t p4a_config_get_n_components     (const p4a_config_t*, int32_t*);
P4A_API p4a_status_t p4a_config_get_center_x         (const p4a_config_t*, int32_t*);
P4A_API p4a_status_t p4a_config_get_scale_x          (const p4a_config_t*, int32_t*);
P4A_API p4a_status_t p4a_config_get_center_y         (const p4a_config_t*, int32_t*);
P4A_API p4a_status_t p4a_config_get_scale_y          (const p4a_config_t*, int32_t*);
P4A_API p4a_status_t p4a_config_get_tol              (const p4a_config_t*, double*);
P4A_API p4a_status_t p4a_config_get_store_scores     (const p4a_config_t*, int32_t*);
typedef enum p4a_operator_kind_t {
    P4A_OP_IDENTITY            = 0,
    P4A_OP_CENTER              = 1,
    P4A_OP_AUTOSCALE           = 2,
    P4A_OP_PARETO_SCALE        = 3,
    P4A_OP_SNV                 = 4,
    P4A_OP_MSC                 = 5,
    P4A_OP_EMSC                = 6,
    P4A_OP_DETREND_POLY        = 7,
    P4A_OP_SAVGOL_SMOOTH       = 8,
    P4A_OP_SAVGOL_DERIVATIVE   = 9,
    P4A_OP_NORRIS_WILLIAMS     = 10,
    P4A_OP_ASLS_BASELINE       = 11,
    P4A_OP_OSC                 = 12,
    P4A_OP_EPO                 = 13,
    P4A_OP_WAVELET_DENOISE     = 14,
    P4A_OP_FINITE_DIFFERENCE   = 15,
    P4A_OP_WHITTAKER           = 16,
    P4A_OP_FCK                 = 17
} p4a_operator_kind_t;
P4A_API p4a_status_t p4a_operator_bank_create(p4a_operator_bank_t** out);
P4A_API void         p4a_operator_bank_destroy(p4a_operator_bank_t* bank);
P4A_API p4a_status_t p4a_operator_bank_add   (p4a_operator_bank_t* bank,
                                               p4a_operator_kind_t kind,
                                               const double* params,
                                               int32_t n_params);
P4A_API p4a_status_t p4a_operator_bank_size  (const p4a_operator_bank_t* bank,
                                               int32_t* out_size);
P4A_API uint32_t     p4a_get_abi_version_major(void);
P4A_API uint32_t     p4a_get_abi_version_minor(void);
P4A_API uint32_t     p4a_get_abi_version_patch(void);
P4A_API uint32_t     p4a_get_abi_version_int(void);   
P4A_API const char*  p4a_get_version_string(void);    
P4A_API const char*  p4a_get_build_info(void);        
P4A_API const char*  p4a_get_git_revision(void);      
P4A_API p4a_status_t p4a_validation_plan_create(p4a_validation_plan_t** out);
P4A_API void         p4a_validation_plan_destroy(p4a_validation_plan_t* plan);
P4A_API p4a_status_t p4a_validation_plan_set_n_samples(
    p4a_validation_plan_t* plan, int64_t n_samples);
P4A_API p4a_status_t p4a_validation_plan_add_fold(
    p4a_validation_plan_t* plan,
    const int64_t* train_indices, int64_t n_train,
    const int64_t* test_indices,  int64_t n_test);
P4A_API p4a_status_t p4a_validation_plan_get_n_samples(
    const p4a_validation_plan_t* plan, int64_t* out_n_samples);
P4A_API p4a_status_t p4a_validation_plan_get_n_folds(
    const p4a_validation_plan_t* plan, int32_t* out_n_folds);
P4A_API p4a_status_t p4a_aom_global_select(
    p4a_context_t* ctx,
    const p4a_config_t* cfg,
    const p4a_operator_bank_t* bank,
    const p4a_matrix_view_t* X,
    const p4a_matrix_view_t* Y,
    const p4a_validation_plan_t* plan,
    int32_t max_components,
    p4a_aom_global_result_t** out_result);
P4A_API void p4a_aom_global_result_destroy(p4a_aom_global_result_t* result);
P4A_API p4a_status_t p4a_aom_global_result_get_n_operators(
    const p4a_aom_global_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_global_result_get_max_components(
    const p4a_aom_global_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_global_result_get_selected_operator_index(
    const p4a_aom_global_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_global_result_get_selected_n_components(
    const p4a_aom_global_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_global_result_get_best_score(
    const p4a_aom_global_result_t* result, double* out);
P4A_API p4a_status_t p4a_aom_global_result_get_operator_kinds(
    const p4a_aom_global_result_t* result,
    const p4a_operator_kind_t** out_data, int32_t* out_size);
P4A_API p4a_status_t p4a_aom_global_result_get_operator_scores(
    const p4a_aom_global_result_t* result,
    const double** out_data, int32_t* out_size);
P4A_API p4a_status_t p4a_aom_global_result_get_rmse_curves(
    const p4a_aom_global_result_t* result,
    const double** out_data, int32_t* out_rows, int32_t* out_cols);
P4A_API p4a_status_t p4a_aom_global_result_get_predictions(
    const p4a_aom_global_result_t* result,
    const double** out_data, int64_t* out_rows, int64_t* out_cols);